linux/driver/tmp/3.13.0-45-generic/block_ops_release_returns_int.log
+ gcc -Os -isystem /lib/modules/3.13.0-45-generic/build/include -isystem /lib/modules/3.13.0-45-generic/build/include/uapi -isystem /lib/modules/3.13.0-45-generic/build/arch/x86/include/generated -I /lib/modules/3.13.0-45-generic/build/arch/x86/include -Wall -Werror -Werror-implicit-function-declaration -DKBUILD_BASENAME= -include generated/autoconf.h -o tmp/3.13.0-45-generic/block_ops_release_returns_int.E.c -E /home/sgosali/Documents/Work/RHEL6xFLASH/linux/driver/../kabi/tests/block_ops_release_returns_int.c
+ gcc -Os -isystem /lib/modules/3.13.0-45-generic/build/include -isystem /lib/modules/3.13.0-45-generic/build/include/uapi -isystem /lib/modules/3.13.0-45-generic/build/arch/x86/include/generated -I /lib/modules/3.13.0-45-generic/build/arch/x86/include -Wall -Werror -Werror-implicit-function-declaration -DKBUILD_BASENAME= -include generated/autoconf.h -o tmp/3.13.0-45-generic/block_ops_release_returns_int.o -c /home/sgosali/Documents/Work/RHEL6xFLASH/linux/driver/../kabi/tests/block_ops_release_returns_int.c
/home/sgosali/Documents/Work/RHEL6xFLASH/linux/driver/../kabi/tests/block_ops_release_returns_int.c:15:2: error: initialization from incompatible pointer type [-Werror]
  .release = block_ops_release,
  ^
/home/sgosali/Documents/Work/RHEL6xFLASH/linux/driver/../kabi/tests/block_ops_release_returns_int.c:15:2: error: (near initialization for ‘foo.release’) [-Werror]
cc1: all warnings being treated as errors
